fixed bleeding upvote instances

--- a/src/resource/Resource.css
+++ b/src/resource/Resource.css
@@ -88,36 +88,6 @@ color: #14C38E;
     color: #14C38E;
 }
 
-.Blog {
-    position: relative;
-    width: 407px;
-    height: 210px;
-    background: #14C38E;
-    border-radius: 15px;
-    display: flex;
-}
-
-
-.Blog_add_button_container {
-    height: 210px;
-}
-.Blog_tittle {
-    position: relative;
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-
-    /* identical to box height, or 120% */
-
-    text-align: center;
-    letter-spacing: 0.5px;
-
-    color: #F2F0EB;
-    height: 25%;
-    padding-top: 15px;
-}
 
 ul {
     display: flex;
@@ -129,47 +99,6 @@ ul {
 
 li {
     margin-left: 1.5rem;
-}
-
-.Blog_container {
-    display: flex;
-    flex-direction: column;
-
-}
-
-.Blog_information {
-    position: relative;
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 24px;
-    /* or 240% */
-
-    text-align: center;
-    letter-spacing: 0.5px;
-
-    color: #A2FFE0;
-    height: 50%;
-    padding: 0px 5px;
-
-
-}
-
-.Blog_button{
-    background-color: #00FFAB;
-    color: #1A6A52;
-    margin: 0;
-    padding: 5px 0;
-    width: 50%;
-}
-
-.Blog_button_container {
-    height: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
 }
 
 
